syntax = "proto3";
package users;
option java_package = "com.empuje.grpc.users";
option java_multiple_files = true;

service UsersService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string nombre = 3;
  string apellido = 4;
  string email = 5;      // 5 = email
  string telefono = 6;   // 6 = telefono
  int32 rol_id = 7;
  bool  activo = 8;
}

message LoginResponse {
  bool ok = 1;
  string mensaje = 2;
  User user = 3;
}
